2012-04-19  Sam Steingold  <sds@gnu.org>

	* array.d (data_to_sbvector): addd a modexp function
	(copy_sbvector): use it
	* lispbibl.d (data_to_sbvector): add the prototype
	(data_to_sb8vector): add a #define and export both to clisp.h
	* modules/berkeley-db/bdb.c, modules/clx/new-clx/clx.f:
	* modules/dirkey/dirkey.c, modules/gdbm/gdbm.c:
	* modules/pcre/cpcre.c, modules/rawsock/rawsock.c:
	* modules/syscalls/calls.c: use them

2012-04-18  Sam Steingold  <sds@gnu.org>

	* error.d (error_pos_integer): add, based on charstrg.d:error_posint
	* lispbibl.d (error_pos_integer): add the prototype
	* charstrg.d (error_posint): remove
	(test_index): use error_pos_integer instead
	* sequence.d (error_posint): remove
	(test_start_end, test_start_end_1, test_count_arg):
	use error_pos_integer instead

2012-03-27  Sam Steingold  <sds@gnu.org>

	* modules/pcre/cpcre.c (pcre_config_option): check the return
	value of pcre_config() and use a long for value storage

2012-03-27  Sam Steingold  <sds@gnu.org>

	* modules/i18n/gettext.c (bool_char_lconv, int_char_lconv): treat
	-1 like CHAR_MAX and use sfixnum instead of fixnum

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* hashtabl.d (prepare_resize): check kvtable size against
	ARRAY-DIMENSION-LIMIT

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (arraysize_limit_1) [MACOSX, WIDE_HARD]: set to
	2^24-2 since HEAPCODES memory model is used

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (signal_handler_thread) [MULTITHREAD, MACOSX]: ignore
	SIGHUP & SIGCONT until I know how to handle them (vfork()
	causes SIGHUP - e.g. (DISASSEMBLE 'CAR))

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* foreign.d (FOREIGN-CALL-OUT): foreign call may block. use
	begin/end_block_system_call()

2012-02-13  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2b.lisp (compute-dispatch): Don't blindly assume that
	(bc-and-not class test-class) is non-nil; test it explicitly.
	[bug#3487338]
