@@ -1,6 +1,16 @@
 2012-04-19  Sam Steingold  <sds@gnu.org>
 
-	* array.d (data_to_sbvector): addd a modexp function
+	The official binary IP address representation is now a byte
+	vector, not an integer.
+	* socket.d (string_to_addr1): use data_to_sb8vector instead of
+	LEbytes_to_UI
+	* modules/rawsock/rawsock.c (CONVERT-ADDRESS): ipv6 is 128 bits,
+	not 64; accept byte vectors too
+	* modules/rawsock/test.tst: use CONVERT-ADDRESS instead of ip->ve
+
+2012-04-19  Sam Steingold  <sds@gnu.org>
+
+	* array.d (data_to_sbvector): add a modexp function
 	(copy_sbvector): use it
 	* lispbibl.d (data_to_sbvector): add the prototype
 	(data_to_sb8vector): add a #define and export both to clisp.h
